ICE. Mensaje descripcion necesaria
Se han agregado contenido solicitadas

--- a/index.html
+++ b/index.html
@@ -301,6 +301,16 @@
           con el objetivo de conseguir un tejido empresarial más competitivo.
         </p>
         <img src="/img/subvencion2.png" alt="Logos DEFER - JCYL - ICE" />
+        <div class="subvencion-proyecto">
+          <p>Descripción del proyecto: Ampliación de nave industrial y nueva linea de producción.</p>
+          <p>Nº Expediente: 02/18/VA/0014</p>
+          <p>Plazo realización: 31/07/2020</p>
+        </div>
+        <div class="subvencion-proyecto">
+          <p>Descripción del proyecto: Ampliación de nave industrial y líneas de producción Plásticos Khudos S.L.</p>
+          <p>Nº Expediente: 02/18/VA/0235</p>
+          <p>Plazo realización: 31/03/2024</p>
+        </div>
       </section>
     </div>
 
