--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Plasticos Khudos S.L. | Fabricacion de Plastico de Burbuja</title>
+    <title>Plásticos Khudos S.L. | Fabricación de Plástico de Burbuja</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css" />
@@ -42,9 +42,10 @@
           <li><a class="opcion-hamburguesa" href="#">Inicio</a></li>
           <li>
             <a class="opcion-hamburguesa" href="#quienes_anchor"
-              >¿Quienes somos?</a
+              >¿Quiénes somos?</a
             >
           </li>
+
           <li>
             <a class="opcion-hamburguesa" href="#productos_anchor">Productos</a>
           </li>
@@ -149,8 +150,7 @@
             <h3><i class="fas fa-angle-double-up"></i>Burbuja</h3>
             <p>
               Rollos de plástico de burbuja de 1,00 / 1,20 / 1,60 m hasta
-              300m.lineales desde 30g/m2 con diametro 10 / 12 / 25mm.<br /><br />Otras
-              opciones; tricapa, cortes, precortes, anchos especiales, etc.
+              300 m lineales desde 30 g/m² con diámetro 10 / 12 / 25 mm.
             </p>
           </div>
         </div>
@@ -190,8 +190,8 @@
           <div class="producto-item-content">
             <h3><i class="fas fa-angle-double-up"></i>Formatos/Bolsas</h3>
             <p>
-              Fabrcación de bolsas o formatos a medida , tanto con plástico de
-              burbuja como foam.<br /><br />Otras opciones: solapa, autocierre
+              Fabricación de bolsas o formatos a medida, tanto con plástico de
+burbuja como foam.<br /><br />Otras opciones: solapa, autocierre
               adhesivo, disinto tipo de embolsado, etc.
             </p>
           </div>
@@ -215,7 +215,7 @@
         <div class="contacto-container-content">
           <div>
             <i class="fas fa-headset"></i>
-            <p>Telefono de contacto: <strong>983-601-000</strong></p>
+            <p>Teléfono de contacto: <strong>983-601-000</strong></p>
             <p>
               Horario de atención al cliente: <strong>09-14h y 16-19h</strong>
             </p>
@@ -237,13 +237,13 @@
         <h2><i class="far fa-question-circle"></i> Preguntas más frecuentes</h2>
 
         <div class="faq-container-pregunta">
-          <h4>¿Que plazo de entrega tenemos?</h4>
-          <p>
-            Aproximadamente unos 7-15 días. El plazo de entrega depende del tipo
-            de producto solicitado y la homogeneidad del pedido. Si son
-            materiales estandares el tiempo de respuesta se reduce
-            drasticamente, incluso hasta los 2-3 días.
-          </p>
+<h4>¿Qué plazo de entrega tenemos?</h4>
+<p>
+  Aproximadamente unos 7-15 días. El plazo de entrega depende del tipo
+  de producto solicitado y la homogeneidad del pedido. Si son
+  materiales estándar, el tiempo de respuesta se reduce
+  drásticamente, incluso hasta los 2-3 días.
+</p>
         </div>
 
         <div class="faq-container-pregunta">
@@ -251,9 +251,8 @@
           <p>
             Principalmente trabajamos con distribuidores o mayoristas. La
             cantidad mínima son cargas de completas (con la posiblidad de
-            combinar distintas referencias).<br /><br />Si necesita cantidades
-            más pequeñas pongase en contaco con nuestros comerciales y quizas
-            podamos redirigirle a algún distribuidor cercano.
+            combinar distintas referencias).<br /><br />Si necesita cantidades más pequeñas, póngase en contacto con nuestros comerciales y quizás
+podamos redirigirle a algún distribuidor cercano.
           </p>
         </div>
 
@@ -286,7 +285,7 @@
           <a href="https://goo.gl/maps/tfMogMzmdxresLVz7" target="_blank">
             <div>
               <i class="fas fa-map-marked"></i>
-              <p>Ver localizacion</p>
+              <p>Ver localización</p>
             </div>
           </a>
         </div>
@@ -302,7 +301,7 @@
         </p>
         <img src="/img/subvencion2.png" alt="Logos DEFER - JCYL - ICE" />
         <div class="subvencion-proyecto">
-          <p>Descripción del proyecto: Ampliación de nave industrial y nueva linea de producción.</p>
+          <p>Descripción del proyecto: Ampliación de nave industrial y nueva línea de producción.</p>
           <p>Nº Expediente: 02/18/VA/0014</p>
           <p>Plazo realización: 31/07/2020</p>
         </div>
