--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             ></a>
             <a href="#faq"
               ><li>
-                <p>Pmf</p>
+                <p>FAQ</p>
                 <i class="fas fa-book"></i></li
             ></a>
           </ul>
@@ -91,56 +91,56 @@
       </nav>
 
       <!-- HERO -->
-      <section id="hero" class="hero-container">
-        <div class="hero-container-punchline">
-          <h1>Plásticos Khudos S.L.</h1>
-          <h4>Fabricación y manipulación de plástico de burbujas</h4>
-        </div>
-        <p>
-          Producción y venta de <strong>plástico de burbuja</strong> enfocada al
-          mayorista con compromiso en el mejor
-          <strong>precio y servicio</strong> del mercado. Años de experiencia en
-          producción nos respaldan como <strong>fabricantes</strong>.
-        </p>
-        <p>
-          Contacte con nuestros comerciales para solicitar su oferta de
-          distribuidor personalizada.
-        </p>
-        <a class="boton" href="#contacto_anchor">Conocer más</a>
-      </section>
+<section id="hero" class="hero-container">
+  <div class="hero-container-punchline">
+    <h1>Plásticos Khudos S.L.</h1>
+    <h4>Fabricación y manipulación de plástico de burbuja</h4>
+  </div>
+  <p>
+    Producción y venta de <strong>plástico de burbuja</strong> enfocada al
+    mayorista, con compromiso en el mejor
+    <strong>precio y servicio</strong> del mercado. Años de experiencia en
+    producción nos respaldan como <strong>fabricantes</strong>.
+  </p>
+  <p>
+    Contacte con nuestros comerciales para solicitar su oferta personalizada para distribuidores.
+  </p>
+  <a class="boton" href="#contacto_anchor">Conocer más</a>
+</section>
 
-      <!-- QUIENES SOMOS -->
-      <span class="anchor" id="quienes_anchor"></span>
-      <section id="quienes" class="quienes-container">
-        <div class="quienes-container-content">
-          <h2>¿Quienes somos?</h2>
-          <p>
-            Creados como un proyecto a manos de expertos veteranos del sector de
-            la extrusión de plástico, Plásticos Khudos S.L. es fundada en 2011
-            en Olmedo (Valladolid).
-          </p>
-          <p>
-            Contamos con múltiples líneas de extrusión y transformación de
-            plástico de burbuja y sus compuestos. Así como un amplio grupo de
-            profesionales preparados para la elaboración del producto con
-            garantías de calidad.
-          </p>
-          <p>
-            Nuestro objetivo es seguir liderando el mercado de la fabricación
-            del plástico de burbuja y seguir en continuo crecimiento para
-            asegurar el suministro de nuestros clientes.
-          </p>
-        </div>
-        <div class="quienes-container-img">
-          <figure>
-            <img src="img/slider1.jpg" alt="slider1" />
-            <img src="img/slider2.jpg" alt="slider2" />
-            <img src="img/slider3.jpg" alt="slider3" />
-            <img src="img/slider4.jpg" alt="slider4" />
-            <img src="img/slider1.jpg" alt="slider1" />
-          </figure>
-        </div>
-      </section>
+<!-- QUIÉNES SOMOS -->
+<span class="anchor" id="quienes_anchor"></span>
+<section id="quienes" class="quienes-container">
+  <div class="quienes-container-content">
+    <h2>¿Quiénes somos?</h2>
+    <p>
+      Nacidos como un proyecto impulsado por expertos veteranos del sector de
+      la extrusión de plásticos, Plásticos Khudos S.L. fue fundada en 2011
+      en Olmedo (Valladolid).
+    </p>
+    <p>
+      Contamos con múltiples líneas de extrusión y transformación de
+      plástico de burbuja y sus compuestos, así como con un amplio equipo de
+      profesionales preparados para elaborar el producto con las máximas
+      garantías de calidad.
+    </p>
+    <p>
+      Nuestro objetivo es seguir liderando el mercado de la fabricación
+      de plástico de burbuja y continuar en constante crecimiento para
+      garantizar el suministro a nuestros clientes.
+    </p>
+  </div>
+  <div class="quienes-container-img">
+    <figure>
+      <img src="img/slider1.jpg" alt="slider1" />
+      <img src="img/slider2.jpg" alt="slider2" />
+      <img src="img/slider3.jpg" alt="slider3" />
+      <img src="img/slider4.jpg" alt="slider4" />
+      <img src="img/slider1.jpg" alt="slider1" />
+    </figure>
+  </div>
+</section>
+
 
       <!-- PRODUCTOS -->
       <span class="anchor" id="productos_anchor"></span>
@@ -231,41 +231,43 @@ burbuja como foam.<br /><br />Otras opciones: solapa, autocierre
         </div>
       </section>
 
-      <!-- FAQ -->
-      <span class="anchor" id="faq_anchor"></span>
-      <section id="faq" class="faq-container">
-        <h2><i class="far fa-question-circle"></i> Preguntas más frecuentes</h2>
+<!-- FAQ -->
+<span class="anchor" id="faq_anchor"></span>
+<section id="faq" class="faq-container">
+  <h2><i class="far fa-question-circle"></i> Preguntas más frecuentes</h2>
 
-        <div class="faq-container-pregunta">
-<h4>¿Qué plazo de entrega tenemos?</h4>
-<p>
-  Aproximadamente unos 7-15 días. El plazo de entrega depende del tipo
-  de producto solicitado y la homogeneidad del pedido. Si son
-  materiales estándar, el tiempo de respuesta se reduce
-  drásticamente, incluso hasta los 2-3 días.
-</p>
-        </div>
+  <div class="faq-container-pregunta">
+    <h4>¿Qué plazo de entrega tenemos?</h4>
+    <p>
+      Aproximadamente entre 7 y 15 días. El plazo de entrega depende del tipo
+      de producto solicitado y de la homogeneidad del pedido. Si se trata de
+      materiales estándar, el tiempo de respuesta se reduce
+      drásticamente, incluso hasta los 2 o 3 días.
+    </p>
+  </div>
 
-        <div class="faq-container-pregunta">
-          <h4>¿Que cantidad tengo que pedir?</h4>
-          <p>
-            Principalmente trabajamos con distribuidores o mayoristas. La
-            cantidad mínima son cargas de completas (con la posiblidad de
-            combinar distintas referencias).<br /><br />Si necesita cantidades más pequeñas, póngase en contacto con nuestros comerciales y quizás
-podamos redirigirle a algún distribuidor cercano.
-          </p>
-        </div>
+  <div class="faq-container-pregunta">
+    <h4>¿Qué cantidad tengo que pedir?</h4>
+    <p>
+      Principalmente trabajamos con distribuidores o mayoristas. La
+      cantidad mínima son cargas completas (con la posibilidad de
+      combinar distintas referencias).<br /><br />
+      Si necesita cantidades más pequeñas, póngase en contacto con nuestros comerciales y quizás
+      podamos redirigirle a algún distribuidor cercano.
+    </p>
+  </div>
 
-        <div class="faq-container-pregunta">
-          <h4>¿Hay material en stock para recoger ahora mismo?</h4>
-          <p>
-            Debido a nuestro enfoque de trabajar bajo pedido y con materiales
-            especificos para cada cliente, tenemos miles de referencias. Si no
-            es un material estandar, seguramente tengamos que fábricarlo.
-            Pongasé en contacto con nuestros comerciales para más información.
-          </p>
-        </div>
-      </section>
+  <div class="faq-container-pregunta">
+    <h4>¿Hay material en stock para recoger ahora mismo?</h4>
+    <p>
+      Debido a nuestro enfoque de trabajo bajo pedido y con materiales
+      específicos para cada cliente, tenemos miles de referencias. Si no
+      se trata de un material estándar, es probable que tengamos que fabricarlo.
+      Póngase en contacto con nuestros comerciales para más información.
+    </p>
+  </div>
+</section>
+
 
       <!-- FOOTER -->
       <span class="anchor" id="footer_anchor"></span>
